cmake_minimum_required(VERSION 3.9)
project(c-w3resource C)

set(CMAKE_C_STANDARD 99)

add_executable(c-w3resource main.c)
add_executable(exercise01 C_Basic_Declarations_and_Expressions/exercise01.c)
add_executable(exercise02 C_Basic_Declarations_and_Expressions/exercise02.c)
add_executable(exercise03 C_Basic_Declarations_and_Expressions/exercise03.c)
add_executable(exercise04 C_Basic_Declarations_and_Expressions/exercise04.c)
add_executable(exercise05 C_Basic_Declarations_and_Expressions/exercise05.c)
add_executable(exercise06 C_Basic_Declarations_and_Expressions/exercise06.c)
add_executable(exercise07 C_Basic_Declarations_and_Expressions/exercise07.c)
add_executable(exercise08 C_Basic_Declarations_and_Expressions/exercise08.c)
add_executable(exercise09 C_Basic_Declarations_and_Expressions/exercise09.c)
add_executable(exercise10 C_Basic_Declarations_and_Expressions/exercise10.c)
add_executable(exercise11 C_Basic_Declarations_and_Expressions/exercise11.c)
add_executable(exercise12 C_Basic_Declarations_and_Expressions/exercise12.c)
add_executable(exercise13 C_Basic_Declarations_and_Expressions/exercise13.c)
